[package]
name = "cc-tracker-rust"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "backend"
path = "src/backend/main.rs"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI (keeping for optional CLI mode)
clap = { version = "4", features = ["derive"] }
tabled = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
